<resources>
    <string name="app_name">ChatApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="firstname">firstname</string>
    <string name="lastname">lastName</string>
    <string name="username">userName</string>
    <string name="emale">emale</string>
    <string name="email_adress">email_adress</string>
    <string name="password">password</string>
    <string name="create_acouent">Create Acouent</string>
</resources>